--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,37 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Module-2 solution</title>
+    <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+    <div class="heading">
+        <h2>Our Menu</h2>
+    </div>
+    <div class="container">
+        <div class="boxes">
+            <div class="box box1">
+                <div class="chicken"><p>Chawal</p></div>
+                <div class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
+                </div>
+            </div>
+            <div class="box box2">
+                <div class="beef"><p>Pizza</p></div>
+                <div class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
+                </div>
+            </div>
+            <div class="box box3">
+                <div class="sushi"><p>Sushi</p></div>
+                <div class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
