--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Module-2 solution</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Assignment Solution for Module 2</title>
+    <link rel="stylesheet" href="css/style.css"> 
 </head>
 <body>
-    <div class="heading">
-        <h2>Our Menu</h2>
-    </div>
-    <div class="container">
-        <div class="boxes">
-            <div class="box box1">
-                <div class="chicken"><p>Chawal</p></div>
-                <div class="text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
-                </div>
-            </div>
-            <div class="box box2">
-                <div class="beef"><p>Pizza</p></div>
-                <div class="text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
-                </div>
-            </div>
-            <div class="box box3">
-                <div class="sushi"><p>Sushi</p></div>
-                <div class="text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
-                </div>
-            </div>
+    <h1>Our Menu</h1>
+    <div class="row">
+        <div class="col-lg-4 col-md-6">
+            <section>
+                <p class="p1">Chicken</p>
+                <p class="p2">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec erat risus, sollicitudin ac venenatis nec, rutrum et ligula. Sed felis quam, tincidunt eget turpis et, luctus interdum augue. Vivamus ultrices enim elit, at imperdiet lectus lobortis non. Mauris vitae nisl nibh. Phasellus nec ipsum non felis condimentum volutpat nec imperdiet ante. Donec consequat ut orci sit amet condimentum. Donec faucibus dui vitae nibh cursus condimentum.
+                </p>
+            </section>
+        </div>
+        <div class="col-lg-4 col-md-6">
+            <section>
+                <p class="p3">Beef</p>
+                <p class="p4">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec erat risus, sollicitudin ac venenatis nec, rutrum et ligula. Sed felis quam, tincidunt eget turpis et, luctus interdum augue. Vivamus ultrices enim elit, at imperdiet lectus lobortis non. Mauris vitae nisl nibh. Phasellus nec ipsum non felis condimentum volutpat nec imperdiet ante. Donec consequat ut orci sit amet condimentum. Donec faucibus dui vitae nibh cursus condimentum.
+                </p>
+            </section>
+        </div>
+        <div class="col-lg-4 col-md-12">
+            <section>
+                <p class="p5">Sushi</p>
+                <p class="p6">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec erat risus, sollicitudin ac venenatis nec, rutrum et ligula. Sed felis quam, tincidunt eget turpis et, luctus interdum augue. Vivamus ultrices enim elit, at imperdiet lectus lobortis non. Mauris vitae nisl nibh. Phasellus nec ipsum non felis condimentum volutpat nec imperdiet ante. Donec consequat ut orci sit amet condimentum. Donec faucibus dui vitae nibh cursus condimentum.
+                </p>
+            </section>
         </div>
     </div>
 </body>
